# stt-server

./: .envrc  .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
examples/: transcribe.py
exploration/canary_qwen/: README.md  explore_embedding_injection.py  explore_generation.py  explore_lora.py  explore_qwen.py  explore_weight_loading.py  test_full_model.py  test_integration.py
nemo_lite/: DESIGN.md  LICENSE  NOTICE  __init__.py  model.py  preprocessing.py  projection.py  weights.py
nemo_lite/conformer_lite/: WORKING_LOG.md  __init__.py  attention.py  conformer_block.py  convolution.py  encoder.py  feed_forward.py  pos_encoding.py  subsampling.py
nemo_lite/conformer_lite/tests/: __init__.py  test_attention.py  test_conformer_block.py  test_convolution.py  test_encoder.py  test_feed_forward.py  test_pos_encoding.py  test_subsampling.py
nemo_lite/qwen/: WORKING_LOG.md  __init__.py  wrapper.py
nemo_lite/tests/: test_preprocessing.py  test_projection.py  test_qwen.py  test_weights.py
nix/: development.nix  release.nix
nix/modules/: stt-server.nix
nix/pkgs/fiddle/: default.nix
nix/pkgs/nemo-toolkit/: default.nix
nix/pkgs/nv-one-logger-core/: default.nix
nix/pkgs/nv-one-logger-pytorch-lightning-integration/: default.nix
nix/pkgs/nv-one-logger-training-telemetry/: default.nix
nix/pkgs/stt-server/: package.nix
scripts/: test_client.py
strops-rs/: Cargo.toml  pyproject.toml
strops-rs/nix/: default.nix  development.nix
strops-rs/python/strops/: __init__.py  __init__.pyi
strops-rs/src/: alignment.rs  lib.rs
stt_server/: DESIGN.md  WORKING_LOG.md  __init__.py  data_types.py  pipeline.py  server.py  session.py
stt_server/scripts/: stt_client.py  test_client.py
stt_server/stages/: __init__.py  asr.py  sink.py  vad.py
stt_server/tests/: test_asr.py  test_pipeline.py  test_session.py  test_sink.py  test_vad.py
